<resources>
    <string name="app_name">Proyecto APPS</string>
    <string name="ingresar">INGRESAR</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="seleccione_su_rol">Seleccione su rol</string>
    <string name="rol">Rol</string>
    <string name="materias">Materias</string>
    <string name="estudiante">Estudiante</string>
    <string name="ingrese_su_rol">Ingrese su rol</string>
    <string name="nombre_materia">Nombre Materia</string>
    <string name="enviar">ENVIAR</string>
    <string name="cargar_talleres">Cargar talleres</string>
    <string name="descargar_guias">Descargar Guias</string>
    <string name="seleccionar_archivo">Seleccionar archivo</string>
    <string name="archivos_seleccionados">Archivos seleccionados</string>
    <string name="sistemas_e_informatica">Sistemas e Informatica</string>
</resources>