<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grupo"
    tools:context=".estudiantes2">

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cargar_talleres"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="380dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/descargar_guias"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="257dp"
        android:layout_height="121dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/campotexto"
        android:text="@string/archivos_seleccionados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seleccionar" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="91dp"
        android:layout_height="28dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="16dp"
        android:background="@color/azulclaroestudiante"
        android:fontFamily="@font/roboto_black"
        android:text="@string/enviar"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4" />

    <Button
        android:id="@+id/seleccionar"
        android:layout_width="183dp"
        android:layout_height="28dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:background="@color/azulbordes"
        android:fontFamily="@font/roboto_black"
        android:text="@string/seleccionar_archivo"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/sistemas_e_informatica"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@android:drawable/ic_menu_sort_by_size"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/estudiante"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:layout_width="330dp"
        android:layout_height="165dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4" />

</androidx.constraintlayout.widget.ConstraintLayout>