<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grupo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/roboto"
        android:text="@string/rol"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="282dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/campotexto"
        android:hint="@string/ingrese_su_rol"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/user"
        android:layout_width="278dp"
        android:layout_height="41dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/ingrese_su_usuario"
        android:background="@drawable/campotexto"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/ingrese_su_usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="28dp"
        android:background="@color/azulclaroestudiante"
        android:fontFamily="@font/roboto_black"
        android:onClick="Ingresar"
        android:text="@string/ingresar"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="279dp"
        android:layout_height="38dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/ingrese_su_contrase_a"
        android:background="@drawable/campotexto"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/ingrese_su_contrase_a"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/contrase_a"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/usuario"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="235dp"
        android:layout_height="86dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/roboto_medium"
        android:text="Bienvenido a ServiGuias"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>